Configure TIM1 and TIM8

--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -139,7 +139,9 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true
 NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
@@ -346,13 +348,32 @@ SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+TIM1.DeadTime=20
+TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
+TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
+TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
+TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
+TIM1.OCNPolarity_2=TIM_OCNPOLARITY_HIGH
+TIM1.OCNPolarity_3=TIM_OCNPOLARITY_HIGH
+TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
+TIM1.OffStateRunMode=TIM_OSSR_ENABLE
+TIM1.Period=4096
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N
+TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+TIM8.DeadTime=20
+TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N
+TIM8.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
+TIM8.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
+TIM8.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
+TIM8.OffStateIDLEMode=TIM_OSSI_ENABLE
+TIM8.OffStateRunMode=TIM_OSSR_ENABLE
+TIM8.Period=4096
 USB_DEVICE.CLASS_NAME-CDC_FS=CDC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,USBD_HandleTypeDef-CDC_FS,CLASS_NAME-CDC_FS,CLASS_NAME_FS
