--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_10
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=DISABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
@@ -8,34 +9,45 @@ ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC1.EnableAnalogWatchDog=false
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Mode
-ADC1.InjNumberOfConversion=0
-ADC1.Mode=__NULL
+ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
+ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,InjectedConvMode,ExternalTrigInjecConvEdge,ExternalTrigInjecConv
+ADC1.InjNumberOfConversion=1
+ADC1.InjectedConvMode=None
+ADC1.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelInjectedConversion=1
 ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.ScanConvMode=DISABLE
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_11
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=DISABLE
 ADC2.DataAlign=ADC_DATAALIGN_RIGHT
 ADC2.DiscontinuousConvMode=DISABLE
 ADC2.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC2.EnableAnalogWatchDog=false
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog
-ADC2.InjNumberOfConversion=0
+ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge
+ADC2.InjNumberOfConversion=1
+ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
 ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Rank-1\#ChannelInjectedConversion=1
 ADC2.Resolution=ADC_RESOLUTION_12B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC2.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.ScanConvMode=DISABLE
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC3.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC3.ContinuousConvMode=DISABLE
 ADC3.DMAContinuousRequests=DISABLE
 ADC3.DataAlign=ADC_DATAALIGN_RIGHT
@@ -43,19 +55,23 @@ ADC3.DiscontinuousConvMode=DISABLE
 ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC3.EnableAnalogWatchDog=false
 ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog
-ADC3.InjNumberOfConversion=0
+ADC3.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge
+ADC3.InjNumberOfConversion=1
+ADC3.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC3.NbrOfConversion=1
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.Rank-1\#ChannelInjectedConversion=1
 ADC3.Resolution=ADC_RESOLUTION_12B
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC3.ScanConvMode=DISABLE
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
 FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default
+FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default;myTask02,0,128,StartTask02,Default
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -78,59 +94,71 @@ Mcu.IP9=TIM1
 Mcu.IPNb=16
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
-Mcu.Pin0=PH0-OSC_IN
-Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB0
-Mcu.Pin17=PB1
-Mcu.Pin18=PB10
-Mcu.Pin19=PB11
-Mcu.Pin2=PC0
-Mcu.Pin20=PB13
-Mcu.Pin21=PB14
-Mcu.Pin22=PB15
-Mcu.Pin23=PC6
-Mcu.Pin24=PC7
-Mcu.Pin25=PC8
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
-Mcu.Pin3=PC1
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PC10
-Mcu.Pin34=PC11
-Mcu.Pin35=PC12
-Mcu.Pin36=PB4
-Mcu.Pin37=PB5
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
-Mcu.Pin4=PC2
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin42=VP_FREERTOS_VS_ENABLE
-Mcu.Pin43=VP_SYS_VS_tim14
-Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin47=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin5=PC3
-Mcu.Pin6=PA0-WKUP
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=48
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB1
+Mcu.Pin21=PB2
+Mcu.Pin22=PB10
+Mcu.Pin23=PB11
+Mcu.Pin24=PB12
+Mcu.Pin25=PB13
+Mcu.Pin26=PB14
+Mcu.Pin27=PB15
+Mcu.Pin28=PC6
+Mcu.Pin29=PC7
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PC8
+Mcu.Pin31=PC9
+Mcu.Pin32=PA8
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14
+Mcu.Pin39=PA15
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=PC10
+Mcu.Pin41=PC11
+Mcu.Pin42=PC12
+Mcu.Pin43=PD2
+Mcu.Pin44=PB3
+Mcu.Pin45=PB4
+Mcu.Pin46=PB5
+Mcu.Pin47=PB6
+Mcu.Pin48=PB7
+Mcu.Pin49=PB8
+Mcu.Pin5=PC0
+Mcu.Pin50=PB9
+Mcu.Pin51=VP_FREERTOS_VS_ENABLE
+Mcu.Pin52=VP_SYS_VS_tim14
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM1_VS_no_output4
+Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM8_VS_no_output4
+Mcu.Pin58=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin6=PC1
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0-WKUP
+Mcu.PinsNb=59
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.14.0
 MxDb.Version=DB.4.0.140
+NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:3
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
@@ -139,14 +167,20 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:true\:true\:1
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:true\:true\:2
 NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
 NVIC.TimeBaseIP=TIM14
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=VBUS_S
 PA0-WKUP.Signal=ADCx_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=M1_TEMP
 PA1.Signal=ADCx_IN1
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=M0_CH
 PA10.Signal=S_TIM1_CH3
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
@@ -156,36 +190,94 @@ PA13.Mode=Serial-Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial-Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=M0_ENC_Z
+PA15.Locked=true
+PA15.Signal=GPIO_Input
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=AUX_I
 PA2.Signal=ADCx_IN2
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=GPIO_4
 PA3.Signal=ADCx_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=GPIO_3
 PA4.Signal=ADCx_IN4
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=GPIO_2
 PA5.Signal=ADCx_IN5
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=AUX_V
 PA6.Signal=ADCx_IN6
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=M1_AL
 PA7.Mode=PWM Generation1 CH1 CH1N
 PA7.Signal=TIM8_CH1N
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=M0_AH
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=M0_BH
 PA9.Signal=S_TIM1_CH2
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=M1_BL
 PB0.Mode=PWM Generation2 CH2 CH2N
 PB0.Signal=TIM1_CH2N
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=M1_CL
 PB1.Mode=PWM Generation3 CH3 CH3N
 PB1.Signal=TIM1_CH3N
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=AUX_L
 PB10.Signal=S_TIM2_CH3
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=AUX_H
 PB11.Signal=S_TIM2_CH4
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=EN_GATE
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=M0_AL
 PB13.Mode=PWM Generation1 CH1 CH1N
 PB13.Signal=TIM1_CH1N
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=M0_BL
 PB14.Mode=PWM Generation2 CH2 CH2N
 PB14.Signal=TIM8_CH2N
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=M0_CL
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM8_CH3N
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=GPIO_1
+PB2.Locked=true
+PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=M1_ENC_Z
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=M0_ENC_A
 PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=M0_ENC_B
 PB5.Signal=S_TIM3_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=M1_ENC_A
 PB6.Signal=S_TIM4_CH1
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=M1_ENC_B
 PB7.Signal=S_TIM4_CH2
 PB8.Mode=Master
 PB8.Signal=CAN1_RX
 PB9.Mode=Master
 PB9.Signal=CAN1_TX
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=M0_IB
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=M0_IC
 PC1.Signal=ADCx_IN11
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
@@ -193,13 +285,43 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=M0_nCS
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPIO_Output
+PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIO_Label=M1_nCS
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Output
+PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=M1_DC_CAL
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=M1_IC
 PC2.Signal=ADCx_IN12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=M1_IB
 PC3.Signal=ADCx_IN13
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=AUX_TEMP
 PC4.Signal=ADCx_IN14
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=M0_TEMP
 PC5.Signal=ADCx_IN15
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=M1_AH
 PC6.Signal=S_TIM8_CH1
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=M1_BH
 PC7.Signal=S_TIM8_CH2
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=M1_CH
 PC8.Signal=S_TIM8_CH3
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=M0_DC_CAL
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F405/415
 PCC.MCU=STM32F405RGTx
@@ -209,6 +331,10 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=nFAULT
+PD2.Locked=true
+PD2.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -346,11 +472,13 @@ SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI3.CalculateBaudRate=21.0 MBits/s
 SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
+TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED2
 TIM1.DeadTime=20
-TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode
+TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,OCMode_4
+TIM1.OCMode_4=TIM_OCMODE_TIMING
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
@@ -363,11 +491,12 @@ TIM1.Period=4096
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
+TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED2
 TIM8.DeadTime=20
-TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N
+TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Channel-Output Compare4 No Output
 TIM8.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM8.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
@@ -388,10 +517,14 @@ VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output4.Mode=Output Compare4 No Output
+VP_TIM1_VS_no_output4.Signal=TIM1_VS_no_output4
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_TIM8_VS_no_output4.Mode=Output Compare4 No Output
+VP_TIM8_VS_no_output4.Signal=TIM8_VS_no_output4
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=Odrive
