Force aux drive signals low for safe bringup

--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -77,12 +77,11 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM2
-Mcu.IP11=TIM3
-Mcu.IP12=TIM4
-Mcu.IP13=TIM8
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_FS
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=TIM8
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=ADC3
 Mcu.IP3=CAN1
 Mcu.IP4=FREERTOS
@@ -91,7 +90,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=16
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -145,15 +144,14 @@ Mcu.Pin51=VP_FREERTOS_VS_ENABLE
 Mcu.Pin52=VP_SYS_VS_tim14
 Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin54=VP_TIM1_VS_no_output4
-Mcu.Pin55=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM8_VS_no_output4
-Mcu.Pin58=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin55=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM8_VS_no_output4
+Mcu.Pin57=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=59
+Mcu.PinsNb=58
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.14.0
@@ -229,10 +227,12 @@ PB1.Mode=PWM Generation3 CH3 CH3N
 PB1.Signal=TIM1_CH3N
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=AUX_L
-PB10.Signal=S_TIM2_CH3
+PB10.Locked=true
+PB10.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=AUX_H
-PB11.Signal=S_TIM2_CH4
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=EN_GATE
 PB12.Locked=true
@@ -285,13 +285,15 @@ PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,PinState
 PC13-ANTI_TAMP.GPIO_Label=M0_nCS
 PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
 PC13-ANTI_TAMP.Signal=GPIO_Output
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIOParameters=GPIO_Label,PinState
 PC14-OSC32_IN.GPIO_Label=M1_nCS
 PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.PinState=GPIO_PIN_SET
 PC14-OSC32_IN.Signal=GPIO_Output
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=M1_DC_CAL
@@ -361,7 +363,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false,11-MX_TIM2_Init-TIM2-false,12-MX_ADC3_Init-ADC3-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false,11-MX_ADC3_Init-ADC3-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -450,10 +452,6 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
-SH.S_TIM2_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
-SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
@@ -488,9 +486,18 @@ TIM1.OCNPolarity_3=TIM_OCNPOLARITY_HIGH
 TIM1.OffStateIDLEMode=TIM_OSSI_ENABLE
 TIM1.OffStateRunMode=TIM_OSSR_ENABLE
 TIM1.Period=4096
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=4
+TIM3.IC1Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM3.IC2Filter=4
+TIM3.IC2Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM3.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IC1Filter=4
+TIM4.IC1Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM4.IC2Filter=4
+TIM4.IC2Polarity=TIM_ICPOLARITY_BOTHEDGE
+TIM4.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
 TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
@@ -519,8 +526,6 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_no_output4.Mode=Output Compare4 No Output
 VP_TIM1_VS_no_output4.Signal=TIM1_VS_no_output4
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_TIM8_VS_no_output4.Mode=Output Compare4 No Output
