--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -33,9 +33,12 @@ ADC2.DataAlign=ADC_DATAALIGN_RIGHT
 ADC2.DiscontinuousConvMode=DISABLE
 ADC2.EOCSelection=ADC_EOC_SINGLE_CONV
 ADC2.EnableAnalogWatchDog=false
+ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,ExternalTrigInjecConv,InjectedConvMode
 ADC2.InjNumberOfConversion=1
+ADC2.InjectedConvMode=None
 ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
 ADC2.NbrOfConversion=1
 ADC2.NbrOfConversionFlag=1
@@ -45,28 +48,6 @@ ADC2.Resolution=ADC_RESOLUTION_12B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.ScanConvMode=DISABLE
-ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC3.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
-ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC3.ContinuousConvMode=DISABLE
-ADC3.DMAContinuousRequests=DISABLE
-ADC3.DataAlign=ADC_DATAALIGN_RIGHT
-ADC3.DiscontinuousConvMode=DISABLE
-ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC3.EnableAnalogWatchDog=false
-ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC3.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge
-ADC3.InjNumberOfConversion=1
-ADC3.InjectedOffset-1\#ChannelInjectedConversion=0
-ADC3.NbrOfConversion=1
-ADC3.NbrOfConversionFlag=1
-ADC3.Rank-0\#ChannelRegularConversion=1
-ADC3.Rank-1\#ChannelInjectedConversion=1
-ADC3.Resolution=ADC_RESOLUTION_12B
-ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC3.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
-ADC3.ScanConvMode=DISABLE
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
@@ -77,20 +58,19 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM3
-Mcu.IP11=TIM4
-Mcu.IP12=TIM8
-Mcu.IP13=USB_DEVICE
-Mcu.IP14=USB_OTG_FS
-Mcu.IP2=ADC3
-Mcu.IP3=CAN1
-Mcu.IP4=FREERTOS
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SPI3
-Mcu.IP8=SYS
-Mcu.IP9=TIM1
-Mcu.IPNb=15
+Mcu.IP10=TIM4
+Mcu.IP11=TIM8
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
+Mcu.IP2=CAN1
+Mcu.IP3=FREERTOS
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM3
+Mcu.IPNb=14
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -363,7 +343,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false,11-MX_ADC3_Init-ADC3-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -401,28 +381,22 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.1=ADC2_IN0,IN0
-SH.ADCx_IN0.2=ADC3_IN0,IN0
-SH.ADCx_IN0.ConfNb=3
+SH.ADCx_IN0.ConfNb=2
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.1=ADC2_IN1,IN1
-SH.ADCx_IN1.2=ADC3_IN1,IN1
-SH.ADCx_IN1.ConfNb=3
+SH.ADCx_IN1.ConfNb=2
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.1=ADC2_IN10,IN10
-SH.ADCx_IN10.2=ADC3_IN10,IN10
-SH.ADCx_IN10.ConfNb=3
+SH.ADCx_IN10.ConfNb=2
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.1=ADC2_IN11,IN11
-SH.ADCx_IN11.2=ADC3_IN11,IN11
-SH.ADCx_IN11.ConfNb=3
+SH.ADCx_IN11.ConfNb=2
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.1=ADC2_IN12,IN12
-SH.ADCx_IN12.2=ADC3_IN12,IN12
-SH.ADCx_IN12.ConfNb=3
+SH.ADCx_IN12.ConfNb=2
 SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.1=ADC2_IN13,IN13
-SH.ADCx_IN13.2=ADC3_IN13,IN13
-SH.ADCx_IN13.ConfNb=3
+SH.ADCx_IN13.ConfNb=2
 SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.1=ADC2_IN14,IN14
 SH.ADCx_IN14.ConfNb=2
@@ -431,12 +405,10 @@ SH.ADCx_IN15.1=ADC2_IN15,IN15
 SH.ADCx_IN15.ConfNb=2
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.1=ADC2_IN2,IN2
-SH.ADCx_IN2.2=ADC3_IN2,IN2
-SH.ADCx_IN2.ConfNb=3
+SH.ADCx_IN2.ConfNb=2
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.1=ADC2_IN3,IN3
-SH.ADCx_IN3.2=ADC3_IN3,IN3
-SH.ADCx_IN3.ConfNb=3
+SH.ADCx_IN3.ConfNb=2
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.1=ADC2_IN4,IN4
 SH.ADCx_IN4.ConfNb=2
