remove test task

--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -51,8 +51,9 @@ ADC2.ScanConvMode=DISABLE
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default;myTask02,0,128,StartTask02,Default
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil
+FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
