--- a/stm32cubemx/Odrive.ioc
+++ b/stm32cubemx/Odrive.ioc
@@ -439,9 +439,12 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI3.CalculateBaudRate=21.0 MBits/s
-SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CalculateBaudRate=5.25 MBits/s
+SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.FirstBit=SPI_FIRSTBIT_MSB
+SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit,CLKPhase
 SPI3.Mode=SPI_MODE_MASTER
 TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
