software triggered injected ADC interrupt working. Trigger from tim1 not working

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_10
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_0
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=DISABLE
@@ -24,8 +24,8 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.ScanConvMode=DISABLE
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC2.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_11
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.Channel-1\#ChannelInjectedConversion=ADC_CHANNEL_10
 ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=DISABLE
@@ -36,7 +36,7 @@ ADC2.EnableAnalogWatchDog=false
 ADC2.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
 ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJECCONV_T1_CC4
 ADC2.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,ExternalTrigInjecConv,InjectedConvMode
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,InjNumberOfConversion,EnableAnalogWatchDog,Rank-1\#ChannelInjectedConversion,Channel-1\#ChannelInjectedConversion,SamplingTime-1\#ChannelInjectedConversion,InjectedOffset-1\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,ExternalTrigConvEdge,InjectedConvMode,ExternalTrigInjecConv
 ADC2.InjNumberOfConversion=1
 ADC2.InjectedConvMode=None
 ADC2.InjectedOffset-1\#ChannelInjectedConversion=0
@@ -48,6 +48,29 @@ ADC2.Resolution=ADC_RESOLUTION_12B
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.SamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
 ADC2.ScanConvMode=DISABLE
+ADC3.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC3.Channel-8\#ChannelInjectedConversion=ADC_CHANNEL_11
+ADC3.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC3.ContinuousConvMode=DISABLE
+ADC3.DMAContinuousRequests=DISABLE
+ADC3.DataAlign=ADC_DATAALIGN_RIGHT
+ADC3.DiscontinuousConvMode=DISABLE
+ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC3.EnableAnalogWatchDog=false
+ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC3.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_RISING
+ADC3.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog,Rank-8\#ChannelInjectedConversion,Channel-8\#ChannelInjectedConversion,SamplingTime-8\#ChannelInjectedConversion,InjectedOffset-8\#ChannelInjectedConversion,ExternalTrigInjecConvEdge,InjectedConvMode
+ADC3.InjNumberOfConversion=1
+ADC3.InjectedConvMode=None
+ADC3.InjectedOffset-8\#ChannelInjectedConversion=0
+ADC3.NbrOfConversion=1
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-7\#ChannelRegularConversion=1
+ADC3.Rank-8\#ChannelInjectedConversion=1
+ADC3.Resolution=ADC_RESOLUTION_12B
+ADC3.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.SamplingTime-8\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
+ADC3.ScanConvMode=DISABLE
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
@@ -59,19 +82,20 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM4
-Mcu.IP11=TIM8
-Mcu.IP12=USB_DEVICE
-Mcu.IP13=USB_OTG_FS
-Mcu.IP2=CAN1
-Mcu.IP3=FREERTOS
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI3
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IP10=TIM3
+Mcu.IP11=TIM4
+Mcu.IP12=TIM8
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
+Mcu.IP2=ADC3
+Mcu.IP3=CAN1
+Mcu.IP4=FREERTOS
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
+Mcu.IPNb=15
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -122,7 +146,7 @@ Mcu.Pin49=PB8
 Mcu.Pin5=PC0
 Mcu.Pin50=PB9
 Mcu.Pin51=VP_FREERTOS_VS_ENABLE
-Mcu.Pin52=VP_SYS_VS_tim14
+Mcu.Pin52=VP_SYS_VS_Systick
 Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin54=VP_TIM1_VS_no_output4
 Mcu.Pin55=VP_TIM8_VS_ClockSourceINT
@@ -137,7 +161,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
 MxCube.Version=4.14.0
 MxDb.Version=DB.4.0.140
-NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:3
+NVIC.ADC_IRQn=true\:5\:0\:false\:true\:true\:1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
@@ -146,11 +170,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:true\:true\:1
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true
-NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:true\:true\:2
-NVIC.TimeBase=TIM8_TRG_COM_TIM14_IRQn
-NVIC.TimeBaseIP=TIM14
+NVIC.TIM1_CC_IRQn=true\:5\:0\:false\:true\:true\:2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=VBUS_S
@@ -332,7 +352,7 @@ ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.11.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x3C00
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -340,11 +360,11 @@ ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Odrive.ioc
 ProjectManager.ProjectName=Odrive
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_ADC1_Init-ADC1-false,3-MX_ADC2_Init-ADC2-false,4-MX_CAN1_Init-CAN1-false,5-MX_TIM1_Init-TIM1-false,6-MX_TIM8_Init-TIM8-false,7-MX_USB_DEVICE_Init-USB_DEVICE-false,8-MX_TIM3_Init-TIM3-false,9-MX_TIM4_Init-TIM4-false,10-MX_SPI3_Init-SPI3-false,11-MX_ADC3_Init-ADC3-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -388,16 +408,20 @@ SH.ADCx_IN1.1=ADC2_IN1,IN1
 SH.ADCx_IN1.ConfNb=2
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.1=ADC2_IN10,IN10
-SH.ADCx_IN10.ConfNb=2
+SH.ADCx_IN10.2=ADC3_IN10,IN10
+SH.ADCx_IN10.ConfNb=3
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.1=ADC2_IN11,IN11
-SH.ADCx_IN11.ConfNb=2
+SH.ADCx_IN11.2=ADC3_IN11,IN11
+SH.ADCx_IN11.ConfNb=3
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.1=ADC2_IN12,IN12
-SH.ADCx_IN12.ConfNb=2
+SH.ADCx_IN12.2=ADC3_IN12,IN12
+SH.ADCx_IN12.ConfNb=3
 SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.1=ADC2_IN13,IN13
-SH.ADCx_IN13.ConfNb=2
+SH.ADCx_IN13.2=ADC3_IN13,IN13
+SH.ADCx_IN13.ConfNb=3
 SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.1=ADC2_IN14,IN14
 SH.ADCx_IN14.ConfNb=2
@@ -449,10 +473,9 @@ SPI3.Mode=SPI_MODE_MASTER
 TIM1.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED2
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
 TIM1.DeadTime=20
-TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output,OCMode_4
-TIM1.OCMode_4=TIM_OCMODE_TIMING
+TIM1.IPParameters=Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCNPolarity_1,OCNPolarity_2,OCNPolarity_3,CounterMode,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Period,DeadTime,OffStateRunMode,OffStateIDLEMode,Channel-Output Compare4 No Output
 TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
 TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
@@ -477,7 +500,7 @@ TIM4.IPParameters=EncoderMode,IC1Polarity,IC2Polarity,IC1Filter,IC2Filter
 TIM8.Channel-Output\ Compare4\ No\ Output=TIM_CHANNEL_4
 TIM8.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
-TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED2
+TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED3
 TIM8.DeadTime=20
 TIM8.IPParameters=Channel-PWM Generation3 CH3 CH3N,Channel-PWM Generation2 CH2 CH2N,CounterMode,Period,OffStateRunMode,OffStateIDLEMode,DeadTime,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Channel-Output Compare4 No Output
 TIM8.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
@@ -496,8 +519,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_SYS_VS_tim14.Mode=TIM14
-VP_SYS_VS_tim14.Signal=SYS_VS_tim14
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_no_output4.Mode=Output Compare4 No Output
