nCS line needs pulsing on read, despite incorrect datasheet

--- a/Odrive.ioc
+++ b/Odrive.ioc
@@ -334,8 +334,9 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=GPIO_Label,GPIO_PuPd
 PD2.GPIO_Label=nFAULT
+PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Oscillator
@@ -463,9 +464,9 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2 CH2N
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3 CH3N
 SH.S_TIM8_CH3.ConfNb=1
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase=SPI_PHASE_2EDGE
-SPI3.CalculateBaudRate=5.25 MBits/s
+SPI3.CalculateBaudRate=2.625 MBits/s
 SPI3.DataSize=SPI_DATASIZE_16BIT
 SPI3.FirstBit=SPI_FIRSTBIT_MSB
 SPI3.IPParameters=Mode,CalculateBaudRate,BaudRatePrescaler,DataSize,FirstBit,CLKPhase
